# netcheck

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh_CN.md  README_zh_HK.md  SPEC.md
.github/workflows/: ci.yml  release.yml
scripts/: collect-release-assets.sh  package-release.sh
src/: cli.rs  dns.rs  main.rs  network.rs  speedtest.rs  system.rs  trace.rs  utils.rs
