[package]
name = "netcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
futures = "0.3"
indicatif = "0.17"
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
